; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_busy_tryupgrade.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_page.c_vm_page_busy_tryupgrade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@VPB_BIT_WAITERS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"vm_page_busy_tryupgrade: invalid lock state\00", align 1
@VPB_SINGLE_EXCLUSIVER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_page_busy_tryupgrade(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @vm_page_assert_sbusied(%struct.TYPE_4__* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %4, align 4
  br label %10

10:                                               ; preds = %33, %1
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @VPB_SHARERS(i32 %11)
  %13 = icmp sgt i32 %12, 1
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %35

15:                                               ; preds = %10
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @VPB_BIT_WAITERS, align 4
  %18 = xor i32 %17, -1
  %19 = and i32 %16, %18
  %20 = call i32 @VPB_SHARERS_WORD(i32 1)
  %21 = icmp eq i32 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @KASSERT(i32 %22, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* @VPB_SINGLE_EXCLUSIVER, align 4
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* @VPB_BIT_WAITERS, align 4
  %29 = and i32 %27, %28
  %30 = or i32 %26, %29
  %31 = call i32 @atomic_fcmpset_acq_int(i32* %25, i32* %4, i32 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %34, label %33

33:                                               ; preds = %15
  br label %10

34:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %14
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @vm_page_assert_sbusied(%struct.TYPE_4__*) #1

declare dso_local i32 @VPB_SHARERS(i32) #1

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @VPB_SHARERS_WORD(i32) #1

declare dso_local i32 @atomic_fcmpset_acq_int(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
